Added english language support.

--- a/_sass/bananpaj.scss
+++ b/_sass/bananpaj.scss
@@ -46,6 +46,7 @@ p {
 
 a {
 	text-decoration: none;
+	color: $brand-color;
 }
 
 nav {
@@ -58,16 +59,17 @@ nav {
 	font-size: 30px;
 	font-weight: 200;
 	margin-bottom: 15px;
-}
-nav > a {
-	text-decoration: none;
-	color: white;
-}
-nav > a:hover {
-	color: #CCC;
-}
-nav > a:active {
-	color: #999;
+	
+	a {
+		text-decoration: none;
+		color: white;
+	}
+	a:hover {
+		color: #CCC;
+	}
+	a:active {
+		color: #999;
+	}
 }
 
 header {
@@ -103,11 +105,13 @@ header {
 	box-sizing: border-box;
 	padding: 0;
 }
+
 ul {
 	list-style-type: none;
-}
-ul.recipe > li{
-	margin-top: 1em;
+	
+	&.recipe > li{
+		margin-top: 1em;
+	}
 }
 
 .wrapper {
@@ -130,11 +134,12 @@ ul.recipe > li{
 	font-family: 'Lato', sans-serif;
 	font-size: 14px;
 	font-weight: 200;
+
+	&>* {
+		margin: 10px 0 10px 0;
+	}
 }
 
-#contactform>* {
-	margin: 10px 0 10px 0;
-}
 
 .form-controll {
 	font-family: 'Lato', sans-serif;
@@ -155,11 +160,13 @@ ul.recipe > li{
 	cursor: pointer;
 	height: 36px;
 	background-color: transparent;
+	color: $brand-color;
+
+	&:hover {
+		box-shadow: 0 0 3px rgba(255,255,255,.12),0 1px 4px rgba(255,255,255,.24);
+	}
 }
 
-.btn:hover {
-	box-shadow: 0 0 3px rgba(255,255,255,.12),0 1px 4px rgba(255,255,255,.24);
-}
 
 
 ::-webkit-input-placeholder {
