--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,15 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
+  <link rel="alternate" href="/rss.xml" type="application/rss+xml" />
+    {% capture hide %}
+		{% assign posts=site.posts | where:"date", page.date %}
+		{% for post in posts %}
+		{% if post.lang != page.lang %}
+		{% assign url = post.url %}
+		{% assign lang = post.lang %}
+		{% endif %}
+		{% endfor %}
+		{% endcapture %}{% if url %}
+		<link rel="alternate" hreflang="{{ lang }}" href="{{ url }}" />{% endif %}
 </head>
