--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,11 @@
 	</div>
 </a>
 <nav>
-	<a href="/about/">Om</a>
-	<a href="/contact/">Kontakta</a>
-	<a href="/blog/">Blogg</a>
-</nav>
-</header>
+
+	{% for menu in site.data.navigation[page.lang] %}
+			<a href="{{ menu[1].url }}">{{ menu[1].title }}</a>
+	{% endfor %}
+	</nav>
+	{% assign posts=site.posts | where:"date", page.date | sort: 'path' %}{% for post in posts %}
+	          <a href="{{ post.url }}" class="{{ post.lang }}">{{ post.lang }}</a>{% endfor %}
+	</header>
