--- a/css/main.scss
+++ b/css/main.scss
@@ -14,8 +14,8 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #FFF;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$background-color: #000;
+$brand-color:      #FF0;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
