--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,13 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+$text-color: #FFF;
+$color-primary-0: #8E8D3E;	// Main Primary color */
+$color-primary-1: #FFFC16;
+$color-primary-2: #DCDA3B;
+$color-primary-3: #494828;
+$color-primary-4: #0B0B07;
+
 
 
 // Using media queries with like this:
