--- a/_sass/bananpaj.scss
+++ b/_sass/bananpaj.scss
@@ -11,7 +11,7 @@ body {
 	background: url(/images/bg.jpg) no-repeat center center fixed;
 	background-size: cover;
 	font-family: 'Lato', sans-serif;
-	color: white;
+	color: $text-color;
 	height: 100%;
 	position: absolute;
 	padding: 20px 20px 20px 20px;
@@ -27,7 +27,7 @@ body {
 h1 {
 	font-family: 'Lato', sans-serif;
 	font-size: 1.5em;
-	font-weight: 200;
+	font-weight: 300;
 }
 
 h2 {
@@ -46,7 +46,7 @@ p {
 
 a {
 	text-decoration: none;
-	color: $brand-color;
+	color: $color-primary-2;
 }
 
 nav {
@@ -57,18 +57,18 @@ nav {
 	justify-content: space-between;
 	-webkit-justify-content: space-between;
 	font-size: 30px;
-	font-weight: 200;
+	font-weight: 300;
 	margin-bottom: 15px;
 
 	a {
 		text-decoration: none;
-		color: white;
+		color: $text-color;
 	}
 	a:hover {
-		color: #CCC;
+		color: $color-primary-2;
 	}
 	a:active {
-		color: #999;
+		color: $color-primary-2;
 	}
 
 
@@ -77,12 +77,20 @@ nav {
 	display: flex;
 }
 
+.active {
+  color: $color-primary-0;
+}
+
 .language {
 	display: flex;
 	flex-direction: column;
 	font-size: 15px;
 	margin-left: 10px;
 	justify-content: flex-end;
+
+	.active {
+            color: $color-primary-2;
+        }
 }
 
 header {
@@ -146,7 +154,7 @@ ul {
 	-webkit-flex-direction: column;
 	font-family: 'Lato', sans-serif;
 	font-size: 14px;
-	font-weight: 200;
+	font-weight: 300;
 
 	&>* {
 		margin: 10px 0 10px 0;
@@ -157,7 +165,7 @@ ul {
 .form-controll {
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
-	font-weight: 200;
+	font-weight: 300;
 	background-color: transparent;
 	border:none;
 	border-bottom: 1px solid rgba(255,255,255,0.2);
