--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
           {% if site.data.navigation[page.lang].blog.url == page.url %}class="active"{% endif %}>{{ site.data.navigation[page.lang].blog.title }}</a>
 				<div class="language">
             {% for p in site.posts %}
-              {% if p.date == page.date %}
+              {% if p.ref == page.ref %}
                   {% if p.lang == page.lang %}
                       <a href="{{ p.url }}" class="active {{ p.lang }}">{{ p.lang }}</a>
                   {% else %}
